Enable the use of LocalStack for development only and use a real AWS S3 for production

--- a/AspireWithLocalStack.Api/appsettings.Development.json
+++ b/AspireWithLocalStack.Api/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "LocalStack": {
+    "UseLocalStack": true,
+    "Session": {
+      "RegionName": "us-east-1"
+    }
   }
 }
