--- a/AspireWithLocalStack.Api/appsettings.json
+++ b/AspireWithLocalStack.Api/appsettings.json
@@ -6,17 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "LocalStack": {
-    "UseLocalStack": true,
-    "Session": {
-      "RegionName": "us-east-1"
-    },
-    "Config": {
-      "LocalStackHost": "localhost.localstack.cloud",
-      "EdgePort": 4566
-    }
-  },
   "AWS": {
+    "Profile": "default",
     "Region": "us-east-1"
   }
 }
