--- a/AspireWithLocalStack.Api/AspireWithLocalStack.Api.csproj
+++ b/AspireWithLocalStack.Api/AspireWithLocalStack.Api.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="AWSSDK.S3" Version="4.0.18.4" />
+        <PackageReference Include="AWSSDK.SQS" Version="4.0.2.14" />
         <PackageReference Include="LocalStack.Client.Extensions" Version="2.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.2" />
